--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </head>
 
    <body>
-    <canvas id="renderCanvas"></canvas>
+    <!-- <canvas id="renderCanvas"></canvas> -->
    </body>
 
 </html>
