--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title><%= htmlWebpackPlugin.options.title %></title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
 
-        <style>
-            html, body {
-                overflow: hidden;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
+</head>
 
-            #renderCanvas {
-                width: 100%;
-                height: 100%;
-            }
-        </style>
-
-    </head>
-
-   <body>
-    <!-- <canvas id="renderCanvas"></canvas> -->
-   </body>
+<body>
+</body>
 
 </html>
