--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,41 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <style>
+    * {
+        margin: 0;padding: 0;
+        box-sizing: border-box;
+    }
+    html,body {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
+    .splash {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
+        animation: gradient 3s ease infinite;
+    }
+
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+    </style>
 
 </head>
 
 <body>
+    <div class="splash"></div>
 </body>
 
 </html>
