--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,21 @@
     .splash {
         width: 100%;
         height: 100%;
-        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 400% 400%;
+        background: linear-gradient(-45deg, #1cb2e9, #f15893);
+        background-size: 200% 200%;
         animation: gradient 3s ease infinite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .loader {
+        border: 8px solid transparent;
+        border-radius: 50%;
+        border-top: 8px solid #ffffff;
+        width: 100px;
+        height: 100px;
+        animation: spin 2s linear infinite;
     }
 
     @keyframes gradient {
@@ -36,12 +48,17 @@
             background-position: 0% 50%;
         }
     }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
     </style>
 
 </head>
 
 <body>
-    <div class="splash"></div>
+    <div class="splash"><div class="loader"></div></div>
 </body>
 
 </html>
